--- a/docs/ui/community-docs/community-docs.module.scss
+++ b/docs/ui/community-docs/community-docs.module.scss
@@ -1,3 +1,7 @@
 .gettingStarted {
   background-color: var(--surface01-color, #fffbff);
 }
+
+.withTableOfContent {
+  width: calc(100% - 296px);
+}
